Updated integration tests